fix layout on small screens

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,6 +18,10 @@ $link-color-hover: #fb3e1e;
     color: #111;
 }
 
+img {
+    width: 100%;
+}
+
 a {
     color: $link-color;
     text-decoration: none;
@@ -48,9 +52,13 @@ span.details {
 div.infohead {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-around;
     color: $link-color;
     margin-bottom: 10px;
+    & > span {
+        white-space:nowrap;
+    }
 }
 
 header, nav, main, footer {
@@ -62,6 +70,11 @@ header {
     margin-top: 15px;
     & > h1 {
         text-align: center;
+    }
+    & img {
+        width: 600px;
+        height: 250px;
+        background-color: #6f5655;
     }
 }
 
@@ -101,4 +114,17 @@ footer {
         color: #333;
         text-align: right;
     }
+}
+
+@media only screen and (max-width: 599px) {
+header, nav, main, footer {
+    width: 300px;
+}
+header img {
+    width: 300px;
+    height: auto;
+}
+h1 {
+    font-size: 1.3rem;
+}
 }
